@@ -1,0 +1,36 @@
+package org.apache.solr.util;
+
+import java.io.IOException;
+
+import org.apache.lucene.index.MergePolicy;
+import org.apache.lucene.index.SegmentInfos;
+
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+public class TestRandomForceMergePolicy extends TestRandomMergePolicy {
+
+  /**
+   * Ensure it finds no merges
+   */
+  public void testFindMerges() throws IOException {
+    MergePolicy mp = new RandomForceMergePolicy();
+    assertNull(mp.findMerges(null, (SegmentInfos)null, null));
+  }
+
+}
+
